testsuite/tests/partial-sigs/should_fail/PartialTopLevelKindSignature.hs
{-# LANGUAGE TopLevelKindSignatures, NamedWildCards #-}

module PartialTopLevelKindSignature where

type T :: _w
data T = MkT
